# hibrid

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt  run.sh
.github/ISSUE_TEMPLATE/: add_machine_benchmark.md
.github/workflows/: ci.yml
backend/: __init__.py  backends.py  classifier.py  cli.py  confidence.py  config.py  db.py  dialects.py  main.py  models_catalog.py  profiler.py  profiles.py  providers.py  registry.py  router.py  schemas.py  task_policy.py
backend/static/: index.html
ci/: README.md
docs/: ARCHITECTURE.md  ARQUITECTURA.md  EXECUTION_PROFILES.md  INVESTIGACION.md  MODELS.md  ORCHESTRATION.md  PLAN.es.md  PLAN.md  RESEARCH.md  ROADMAP.md  articulo-newsletter.md
docs/benchmarks/: README.md  analyze.py  bench.py  competitors.json  eval_charts.py  eval_prompts.json  eval_results.json  eval_routing_sweep.py  eval_run.py  gen_landing_demo.py  hibrid_evaluation.md  md_to_pdf.py  qa_batch_results.json  qa_report.md  quality.json  routing_sweep.json  summary.json  task_model_study.md  token_savings.json  token_savings.md  token_savings_run.py
skills/: README.md
skills/hibrid/: SKILL.md
tests/: batch_qa.py  test_backends.py  test_classifier.py  test_dialects.py  test_router.py  test_router_edge.py
web/newsletter/: 2026-06-26-hibrid-router-that-knows-your-machine.html  2026-06-27-three-servers-no-gpu-benchmark.html  2026-06-29-agent-loop-token-savings.html  2026-06-30-local-first-architecture-stop-paying-opus.html  2026-06-30-task-model-mapping-five-axes.html  README.md  (+2 more)
(+19 files in other folders)
